# coms-w4995-applied-machine-learning-project

./: .gitignore  README.md  Sentiment_Analysis_Model_1.ipynb  external_indicators.py  main.py  pyproject.toml  sentiment.py
analyses/: permutation_importance.py  roc_curve.py
data/: company_data.ipynb  dltr_merged_data.parquet  external_indicators.csv  historical_data_dollartree.csv  historical_data_ulta.csv  historical_data_walmart.csv  lulu_merged_data.parquet  merged_data.csv  refinitiv-2024-10-16.csv  ulta_merged_data.parquet  wba_merged_data.parquet  wmt_merged_data.parquet
data/financial_data/: external_indicators.csv  historical_data_walgreens.csv  lulu.csv
data/model_metadata/: lstm.h5  lstm_results.pkl  random_forest_results.pkl  svm_results.pkl  xgboost_results.pkl
data/sentiment_analyzed_parquets_first_25000/: walgreens_x_25000.parquet  walmart_x_25000.parquet
financial/: external_indicators.py
models/: lstm.h5  lstm.py  lstm_results.pkl  random_forest.py  random_forest_classifier.py  random_forest_results.pkl  svm.py  svm_results.pkl  xgboost.py
notebooks/: AGAI_ChapGPT_Interaction_10_16.ipynb  RandomForestClassifier.ipynb  combine_sentiment_and_financial_data.ipynb  company_data.ipynb  sentiment-3-analyze-texts.ipynb  stocks_sentiment_analysis.ipynb
preprocessing/: eda.py  expand_financial_data.py  share_prices.py
tdmstudio-notebooks/: analyze-texts.ipynb  consolidate-analysis-files.ipynb  prepare-texts.ipynb
utils/: build_confusion_and_feature_plot.py  load_data.py  permutation_importance.py  split_data.py
(+35 files in other folders)
