[tool.poetry]
name = "coms-w4995-applied-machine-learning-project"
version = "0.1.0"
description = "A project for Applied Machine Learning"
authors = [
  "Ruibin Lyu", 
  "Vi Mai", "Julie Meunier", 
  "Tuba Opel", 
  "Moacir P. de Sá Pereira"
]
readme = "README.md"
packages = [{include = "coms-w4995-applied-machine-learning-project"}]

[tool.poetry.dependencies]
python = "^3.11"
fredapi = "^0.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
