[tool.poetry]
name = "coms-w4995-applied-machine-learning-project"
version = "0.1.0"
description = "A project for Applied Machine Learning"
authors = [
  "Ruibin Lyu", 
  "Vi Mai", "Julie Meunier", 
  "Tuba Opel", 
  "Moacir P. de Sá Pereira"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fredapi = "^0.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
python-dotenv = "^1.0.1"
yfinance = "^0.2.50"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
scikit-learn = "^1.5.2"
keras = "^3.7.0"
scikeras = "^0.13.0"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
